<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.persona.update.UpdateFragment"
    android:padding="24dp"
    >

    <EditText
        android:id="@+id/updateNombres_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_nombres"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/updateEmail_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textWebEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/updateNombres_et"
        tools:layout_editor_absoluteX="99dp" />

    <EditText
        android:id="@+id/updateOcupacion_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_ocupacion"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/updateEmail_et"
        tools:layout_editor_absoluteX="99dp" />

    <EditText
        android:id="@+id/updateBalance_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_balance"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/updateOcupacion_et"
        tools:layout_editor_absoluteX="99dp" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/btn_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateOcupacion_et" />
</androidx.constraintlayout.widget.ConstraintLayout>