<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.persona.add.AddFragment"
    android:padding="24dp">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/addNombres_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_nombres"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/addEmail_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textWebEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/addNombres_et"
        tools:layout_editor_absoluteX="99dp" />

    <EditText
        android:id="@+id/addOcupacion_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_ocupacion"
        android:inputType="textWebEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/addEmail_et"
        tools:layout_editor_absoluteX="99dp" />

    <EditText
        android:id="@+id/addBalance_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_balance"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/addOcupacion_et"
        tools:layout_editor_absoluteX="99dp" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addOcupacion_et" />

</androidx.constraintlayout.widget.ConstraintLayout>